# python-neopool-modbus

./: .gitignore  .release-please-config.json  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: codespell.yaml  release.yaml  ruff.yaml  test.yaml  typecheck.yaml
docs/: modbus-registers-v2023.md  modbus-registers.md
src/neopool_modbus/: __init__.py  client.py  decoders.py  exceptions.py  probe.py  registers.py  status_mask.py
tests/: test_client.py  test_decoders.py  test_probe.py  test_status_mask.py
