[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neopool-modbus"
version = "0.2.0"
description = "Async Python client for Sugar Valley NeoPool / VistaPool / Hidrolife Modbus pool controllers"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [{ name = "Milos Svasek", email = "milos@svasek.net" }]
keywords = [
    "neopool",
    "vistapool",
    "hidrolife",
    "modbus",
    "pool",
    "home-assistant",
    "sugar-valley",
    "hayward",
    "brilix",
    "bayrol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pymodbus>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.7",
    "basedpyright>=1.20",
]

[project.urls]
Homepage = "https://github.com/svasek/python-neopool-modbus"
Repository = "https://github.com/svasek/python-neopool-modbus"
Issues = "https://github.com/svasek/python-neopool-modbus/issues"
Changelog = "https://github.com/svasek/python-neopool-modbus/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/neopool_modbus"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# TODO: tighten lint rules after API stabilization. The minimal ruleset
# matches the homeassistant-vistapool-modbus integration; broader rules
# (B, UP, SIM, RUF) are tracked for re-introduction in follow-up cleanup PRs.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.codespell]
skip = "*.json,CHANGELOG.md"
check-filenames = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src/neopool_modbus"]
omit = ["tests/*"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 99
show_missing = true
