[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neopool-modbus"
version = "2.0.1"
description = "Async Python client for Sugar Valley NeoPool / VistaPool / Hidrolife Modbus pool controllers"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [{ name = "Milos Svasek", email = "milos@svasek.net" }]
keywords = [
    "neopool",
    "vistapool",
    "hidrolife",
    "modbus",
    "pool",
    "home-assistant",
    "sugar-valley",
    "hayward",
    "brilix",
    "bayrol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pymodbus>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.7",
    "basedpyright>=1.20",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/svasek/python-neopool-modbus"
Repository = "https://github.com/svasek/python-neopool-modbus"
Issues = "https://github.com/svasek/python-neopool-modbus/issues"
Changelog = "https://github.com/svasek/python-neopool-modbus/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/neopool_modbus"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    # Default Python style / errors
    "E", "F", "W", "I",
    # Bugbear (likely bugs)
    "B",
    # Blind except
    "BLE",
    # Pyupgrade + simplify (kept from previous config)
    "UP", "SIM",
    # Selected pydocstyle rules - module / public-method / __init__ docstrings
    # plus the "summary line + period" hygiene
    "D102", "D107", "D205", "D415",
    # Datetime: timezone-aware constructors
    "DTZ",
    # Logging format (% placeholders, not f-strings)
    "G",
    # Imports at top-level (not inside functions, save for genuine circulars)
    "PLC0415",
    # min/max collapse
    "PLR1730",
    # Drop redundant assignment-before-return
    "RET504",
    # Ruff-specific: ambiguous Unicode (EN DASH etc.), modern unpacking,
    # int-cast on already-int, unused noqa hygiene
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF046", "RUF100",
    # Try/except hygiene: chain causes, prefer else over duplicate paths
    "B904", "TRY300", "TRY301",
]
ignore = [
    # Long lines are formatter-managed; ruff format wraps where it can.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLC0415", "D102", "D107", "D205", "D415"]

[tool.codespell]
skip = "*.json,CHANGELOG.md"
check-filenames = true

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/neopool_modbus"]

# pymodbus does not yet ship complete type stubs; silence the missing-import
# noise scoped to that package only, so a future third-party dependency
# without stubs will still surface as an error rather than be hidden.
[[tool.mypy.overrides]]
module = "pymodbus.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src/neopool_modbus"]
omit = ["tests/*"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 99
show_missing = true
